welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:18: error: too many arguments for method getCouleurSol: ()java.awt.Color
		if (getCouleurSol(c) == c ) {
                                 ^